# ubt-rs

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.devin/: wiki.json
.github/workflows/: fuzz.yml  lint.yml  proofs.yml  quickchick.yml  release.yml  rust.yml
backlog/: config.yml
backlog/tasks/: task-1 - Fix-needless_raw_string_hashes-clippy-warnings.md  task-10 - Add-Poseidon2-hasher-support.md  task-11 - Fix-clippy-warnings-in-simulation-binary.md  task-12 - Add-doc-examples-for-public-APIs.md  task-13 - Add-code-coverage-reporting-to-CI.md  task-14 - Investigate-cargo-machete-correct-SHA.md  task-15 - Add-more-QuickChick-property-tests.md  task-16 - Benchmark-parallel-vs-sequential-threshold-tuning.md  task-17 - Add-batch-operations-API-documentation.md  task-18 - Implement-real-Poseidon2-hasher.md  task-19 - Add-architecture-decision-records-ADRs.md  task-19 - Compact-binary-serialization-codec.md  task-2 - Review-and-update-dependencies.md  task-20 - Fix-exclusion-proof-verification-for-ExclNoSubindex-case.md  task-20 - Update-key-derivation-to-V3-spec.md  task-21 - Update-key-derivation-to-V3-spec.md  task-3 - Add-cargo-deny-to-CI-for-supply-chain-security.md  task-4 - Complete-Z-scopes-fix-in-tree_build_stepping.v.md  task-5 - Add-performance-benchmarks-to-CI.md  task-6 - Add-cargo-machete-to-CI.md  task-7 - Fix-dead-code-warnings-in-simulation-tests.md  task-8 - Enable-parallel-threshold-optimization.md  task-9 - Review-unwrap-expect-in-production-code.md
benches/: incremental_vs_rebuild.rs  stem_vs_tree.rs
docs/: RUST_MODEL_COMPARISON.md  THEOREMS.md  backlog.md  eip-7864-implementations.md  eip-7864-json.json  eip-7864.md  incremental-updates.md  integration-tests.md  kanban.md  root_hash_executes_derivation.md  ubt-implementation-guide.md
formal/: .gitignore  BUILD_STATUS.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md
formal/docs/: ADMITS_TRACKING.md  AXIOM_CATALOG.md  AXIOM_REDUCTION.md  AXIOM_REDUCTION_PLAN.md  COMPLEXITY_ANALYSIS.md  FFI_INTEGRATION.md  LINKING_COMPLETION_ROADMAP.md  LINKING_LAYER_SETUP.md  M_MONAD_INTERPRETER.md  PANIC_ANALYSIS.md  RUST_MODEL_COMPARISON.md  SPEC_RUST_LINKAGE.md  THEOREMS.md  VERIFICATION_SCOPE.md  VERIFICATION_STATUS.md  VERIFICATION_SUMMARY.md  VERKLE_SECURITY.md  axiom_audit.md  index.md
formal/extraction/: README.md  extract.v  integration_runner.ml  integration_runner_standalone.ml  test_extracted.ml
formal/extraction/ffi/: ffi_bridge.ml  ffi_stubs.ml
formal/extraction/ffi/rust/: Cargo.toml
formal/extraction/ffi/rust/src/: lib.rs
formal/lib/: MInterpreter.v  README.md  StdlibHashMap.v
formal/linking/: MRun.v  README.md  axiom_elimination.v  field_stepping.v  fuel_bridge.v  get_stepping.v  hashmap_bridge.v  insert_stepping.v  interpreter.v  iterator_stepping.v  operations.v  root_hash_stepping.v  types.v  ubt_execution.v  ubt_stepping.v
formal/proofs/: correctness.v  multiproof.v  quickchick_tests.v  quickchick_tests_ci.v
formal/scripts/: count_axioms.sh
formal/simulations/: complexity.v  crypto.v  iterator.v  security.v  serialization.v  streaming.v  tree.v  tree_build_stepping.v  verkle.v  verkle_linking.v
formal/specs/: complexity_spec.v  embedding_spec.v  serialization_spec.v  tree_spec.v
formal/src/: code.v  embedding.v  error.v  hash.v  key.v  node.v  proof.v  tree.v  ubt.v
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_basic_data.rs  fuzz_code_chunk.rs  fuzz_embedding.rs  fuzz_proof_decode.rs  fuzz_streaming.rs  fuzz_tree_ops.rs
scripts/: integration-test.sh  remote-build.sh  watch-simulation.sh
spec/: EIP-7864-spec.md
src/: code.rs  codec.rs  compat_tests.rs  embedding.rs  error.rs  geth_compat.rs  hash.rs  key.rs  lib.rs  node.rs  proof.rs  store.rs  streaming.rs  tree.rs
src/tree/: build.rs  hash.rs  mod.rs
tests/: integration_export.rs  proptests.rs  simulation_test.rs
tests/simulation/: DESIGN.md  context.rs  coordinator.rs  invariants.rs  metrics.rs  mod.rs  ubt_adapter.rs  workload.rs
tests/simulation/grafana/: simulation-dashboard.json
widget/: index.html
