[package]
name = "ubt"
version = "0.2.3"
edition = "2021"
rust-version = "1.74"
description = "Unified Binary Tree implementation based on EIP-7864"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igor53627/ubt-rs"
keywords = ["ethereum", "eip-7864", "binary-tree", "state-tree"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Hashing - BLAKE3 for tree merkleization (hash function TBD per EIP)
blake3 = "1.5"

# Parallel processing
rayon = { version = "1.10", optional = true }

# SHA256 for key derivation (per go-ethereum reference implementation)
sha2 = "0.10"

# Ethereum primitives (compatible with reth)
alloy-primitives = "1"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }

# Error handling
thiserror = "2"

# Hex encoding for debug output
hex = "0.4"

# For simulation binary (optional)
rand = { version = "0.8", optional = true }
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
rand = "0.8"
num_cpus = "1.16"

[features]
## Enables parallel stem hashing via rayon. Provides significant speedup for
## trees with many dirty stems per rebuild cycle.
default = ["parallel"]

## Enables serialization support for tree types (Stem, TreeKey, StemNode).
serde = ["dep:serde", "alloy-primitives/serde"]

## Enables parallel stem hashing using rayon's parallel iterators.
## When enabled, stem hashes are computed concurrently during root_hash() calls.
parallel = ["dep:rayon"]

## Enables the simulation binary for stress testing.
simulate = ["dep:rand", "dep:num_cpus"]

[[bench]]
name = "stem_vs_tree"
harness = false

[[bench]]
name = "incremental_vs_rebuild"
harness = false

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"
required-features = ["simulate"]

