[package]
name = "ubt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ubt]
path = ".."

[[bin]]
name = "fuzz_tree_ops"
path = "fuzz_targets/fuzz_tree_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_proof_decode"
path = "fuzz_targets/fuzz_proof_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_code_chunk"
path = "fuzz_targets/fuzz_code_chunk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_basic_data"
path = "fuzz_targets/fuzz_basic_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_streaming"
path = "fuzz_targets/fuzz_streaming.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_embedding"
path = "fuzz_targets/fuzz_embedding.rs"
test = false
doc = false
bench = false
