[package]
name = "ubt-ffi"
version = "0.1.0"
edition = "2021"
description = "C-compatible FFI bindings for UBT cryptographic primitives"
license = "MIT OR Apache-2.0"

[lib]
name = "ubt_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
blake3 = "1.5"
sha2 = "0.10"

[dev-dependencies]
# None needed for basic tests

[profile.release]
opt-level = 3
lto = true
